--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -192,7 +192,7 @@
 			<optional>true</optional>
 		</dependency>
 		 
-		 <!-- Jedis addon -->
+		 <!-- Jedis -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
