--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -108,6 +108,18 @@ limitations under the License. -->
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.18.1</version>
+			    <configuration>
+			        <junitArtifactName>junit:junit</junitArtifactName>
+			        <encoding>${project.build.sourceEncoding}</encoding>
+			        <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
+			        <outputEncoding>${project.build.sourceEncoding}</outputEncoding>
+			        <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<!-- We need a test jar too  -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
