[Parent] Fixed code coverage with change of pom argLine

--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -117,7 +117,7 @@ limitations under the License. -->
 			        <encoding>${project.build.sourceEncoding}</encoding>
 			        <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
 			        <outputEncoding>${project.build.sourceEncoding}</outputEncoding>
-			        <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+			        <argLine>-Dfile.encoding=${project.build.sourceEncoding} ${argLine}</argLine>
 			    </configuration>
 			</plugin>
 			<plugin>
