--- a/vertigo-persona-api/pom.xml
+++ b/vertigo-persona-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.8.3</version>
+		<version>0.8.4-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 	
