[core] Updated ParamManager to improve simplicity

--- a/vertigo-core/src/test/java/io/vertigo/core/param/multi/app-config.properties
+++ b/vertigo-core/src/test/java/io/vertigo/core/param/multi/app-config.properties
@@ -17,12 +17,12 @@
 # limitations under the License.
 #
 
-mail=john.doe@free.fr
-weight=55
-closed=false
-changed=true
+server.fr.mail=john.doe@free.fr
+server.fr.weight=55
+server.fr.closed=false
+server.fr.changed=true
 
-name=monBeauServer
-port=99
-host=http://wwww/fr
-active=true
+server.fr.name=monBeauServer
+server.fr.port=99
+server.fr.host=http://wwww/fr
+server.fr.active=true
