--- a/vertigo-core/src/test/java/io/vertigo/core/param/multi/app-config2.properties
+++ b/vertigo-core/src/test/java/io/vertigo/core/param/multi/app-config2.properties
@@ -17,12 +17,12 @@
 # limitations under the License.
 #
 
-mail=john.doe@yopmail.com
-weight=55
-closed=false
-changed=false
+server.en.mail=john.doe@yopmail.com
+server.en.weight=55
+server.en.closed=false
+server.en.changed=false
 
-name=myBeautifullServer
-port=99
-host=http://wwww/en
-active=true
+server.en.name=myBeautifullServer
+server.en.port=99
+server.en.host=http://wwww/en
+server.en.active=true
