--- a/vertigo-core/src/test/java/io/vertigo/core/param/properties/app-config.properties
+++ b/vertigo-core/src/test/java/io/vertigo/core/param/properties/app-config.properties
@@ -17,12 +17,12 @@
 # limitations under the License.
 #
 
-mail=john.doe@free.fr
-weight=55
-closed=false
-changed=xxx
+server.mail=john.doe@free.fr
+server.weight=55
+server.closed=false
+server.changed=xxx
 
-name=monBeauServer
-port=99
-host=http://wwww
-active=true
+server.name=monBeauServer
+server.port=99
+server.host=http://wwww
+server.active=true
