--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -8,8 +8,8 @@
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
-	<artifactId>vertigo-ccc</artifactId>
-	<name>vertigo-ccc</name>
+	<artifactId>vertigo-shell</artifactId>
+	<name>vertigo-shell</name>
 
 	<dependencies>
 		<dependency>
@@ -26,27 +26,38 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.4</version>
-		</dependency>
-
-		<!-- json webconsole -->
+		</dependency> -->
+<!-- 
+		json webconsole
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
 			<version>1.1.1</version>
-		</dependency>
+		</dependency> -->
 		
-		<!-- Redis  -->
 		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-   			 <version>2.7.3</version>
-		    <optional>true</optional>
+			<groupId>org.apache.sshd</groupId>
+			<artifactId>sshd-core</artifactId>
+			<version>0.9.0</version>
 		</dependency>
-		<!-- /Distributed -->
-		
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.6</version>
+		</dependency>    
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.53</version>
+		</dependency>
 	</dependencies>
 </project>
