[Bundle] Itext rollback from 4.2.1 to 2.1.7

--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -175,7 +175,7 @@
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
-			<version>4.2.1</version> <!-- dernière version en license LGPL/MPL -->
+			<version>2.1.7</version> <!-- dernière version en license LGPL/MPL -->
 			<optional>true</optional>
 			<exclusions>
 				<!-- BouncyCastle est utilisé pour ouvrir les pdf sécurisés Donc non utilisé pour les générations. -->
