--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -117,8 +117,8 @@ limitations under the License. -->
 			        <encoding>${project.build.sourceEncoding}</encoding>
 			        <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
 			        <outputEncoding>${project.build.sourceEncoding}</outputEncoding>
-			        <argLine>-Dfile.encoding=${project.build.sourceEncoding} ${argLine}</argLine>
-			    </configuration>
+<!-- 			        <argLine>-Dfile.encoding=${project.build.sourceEncoding} ${argLine}</argLine>
+ -->			    </configuration>
 			</plugin>
 			<plugin>
 				<!-- We need a test jar too  -->
