--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -26,11 +26,12 @@
 			<scope>test</scope>
 		</dependency>
 
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.4</version>
-		</dependency> -->
+		</dependency>
+		
 <!-- 
 		json webconsole
 		<dependency>
