--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
@@ -1,3 +1,3 @@
 boot.applicationConfiguration = /META-INF/managers-mda.xml
 
-kpr 		= io/vertigo/dynamock/executionWfileinfo.kpr
+boot.kpr 		= io/vertigo/dynamock/executionWfileinfo.kpr
