--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -42,5 +42,12 @@
 			<version>2.7.7</version>
 			<optional>false</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
+		
+		<!--cache -->
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.8.3</version> <!-- pour EhCachePlugin -->
+		</dependency>
 	</dependencies>
 </project>
