[Dynamo] Replaced MockConnectionProvider by a C3p0 impl

--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -103,6 +103,14 @@
 			<version>1.7.3</version>
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
+		
+		<!-- Connections Pool -->
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.2</version>
+			<optional>true</optional><!-- C3p0DataSourceProviderPlugin -->
+		</dependency>
 
 	<!-- Dépendances à des librairies spécifiques au module -->
 		
