--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -127,6 +127,14 @@
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 
+		<!-- Connections Pool -->
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.2</version>
+			<optional>true</optional><!-- C3p0DataSourceProviderPlugin -->
+		</dependency>
+		
 		<!-- Distributed -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
