--- a/vertigo-tempo-impl/pom.xml
+++ b/vertigo-tempo-impl/pom.xml
@@ -29,6 +29,13 @@
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-commons-impl</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>		
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-dynamo-impl</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
