[Vega] Added ClassPathWebServiceLoaderPlugin with org.reflections

--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -68,6 +68,14 @@
 			</exclusions>
 		</dependency>	
 		
+		
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+			<optional>true</optional> <!-- For ClassPathWebServiceLoaderPlugin -->	
+		</dependency>
+		
 		<!-- test -->	
 		<dependency>
 			<groupId>io.vertigo</groupId>
