--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>1.7.3</version>
+			<version>1.7.5</version>
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 
@@ -169,6 +169,13 @@
 			<version>3.1.0</version>
 			<optional>true</optional><!-- EmbeddedSolrSearchServicesPlugin -->
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+			<optional>true</optional> <!-- For ClassPathWebServiceLoaderPlugin -->	
 		</dependency>
 		
 		<!--FileManager-->
