--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -150,6 +150,22 @@ limitations under the License. -->
 				<!-- executions> <execution> <phase>package</phase> <goals> <goal>license</goal> 
 					</goals> </execution> </executions -->
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.scm</groupId>
+						<artifactId>maven-scm-provider-gitexe</artifactId>
+						<version>1.9.4</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
