--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -58,6 +58,7 @@ limitations under the License. -->
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<vertigo.version>${project.version}</vertigo.version>
 	</properties>
 
 	<build>
