--- a/vertigo-tempo-impl/pom.xml
+++ b/vertigo-tempo-impl/pom.xml
@@ -43,9 +43,9 @@
 				
 		<!-- Mail -->
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
+		    <groupId>com.sun.mail</groupId>
+	    	<artifactId>javax.mail</artifactId>
+		    <version>1.5.5</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.activation</groupId>
