--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -133,12 +133,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+		
+		<!-- 
+		 xml-apis est déjà tiré en 1.0.b2 par hibernate 5, donc on laisse la version de base.
+		 <dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
-			<version>1.3.04</version> <!-- com.lowagie 4.2.0 contient la 1.0.b2 qui est incompatible avec le jdk 7 (sur Node) -->
+			<version>1.3.04</version> com.lowagie 2.1.7 contient la 1.0.b2 qui est incompatible avec le jdk 7 (sur Node)
 			<scope>test</scope>		
-		</dependency>
+		</dependency> -->
+		
 		<!--/exporter-->
 		
 	</dependencies>
