changed mvn.plugin to 3.5.1  (java 8)

--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -89,6 +89,20 @@ limitations under the License. -->
 				</excludes>
 			</testResource>
 		</testResources>
+		<!-- To define the plugin version in your parent POM -->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.5.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<!-- To use the plugin goals in your POM or parent POM -->
 		<plugins>
 			<plugin>
