--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!-- vertigo - simple java starter
 
 Copyright (C) 2013, KleeGroup, direction.technique@kleegroup.com (http://www.kleegroup.com)
@@ -164,6 +164,13 @@ limitations under the License. -->
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+      				<groupId>org.apache.maven.plugins</groupId>
+      				<artifactId>maven-javadoc-plugin</artifactId>
+      				<configuration>
+        				<additionalparam>-Xdoclint:none</additionalparam>
+      				</configuration>
+    			</plugin>
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
