--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -4,6 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
+		<version>0.9.4-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
