--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -30,7 +30,7 @@ limitations under the License. -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vertigo.version>0.9.3</vertigo.version>
+		<vertigo.version>0.9.4-SNAPSHOT</vertigo.version>
 	</properties>
 
 	<licenses>
