--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@ limitations under the License. -->
 		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
 		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
 		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-0.9.1</tag>
+		<tag>vertigo-0.9.4-SNAPSHOT</tag>
 	</scm>
 	
 	<build>
