--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -254,10 +254,24 @@ limitations under the License. -->
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12-beta-1</version>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		    <version>5.0.0-M2</version>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
+		 	<groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.0.0-M2</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-runner -->
+		<dependency>
+		    <groupId>org.junit.platform</groupId>
+		    <artifactId>junit-platform-runner</artifactId>
+		    <version>1.0.0-M2</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
