--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+		</dependency>
 	</dependencies>
 
 </project>
