--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -49,12 +49,12 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.7</version>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
-			<version>2.5</version>
+			<version>2.5.4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.eclipse.jetty.orbit</groupId>
@@ -99,9 +99,9 @@
 		
 		<!-- For Rest Webservice testing -->
 		<dependency>
-	      <groupId>com.jayway.restassured</groupId>
+	      <groupId>io.rest-assured</groupId>
 	      <artifactId>rest-assured</artifactId>
-	      <version>2.8.0</version>
+	      <version>3.0.1</version>
 	      <scope>test</scope>
 		</dependency>
 		
