--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -31,6 +31,10 @@ limitations under the License. -->
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<vertigo.version>0.9.4-SNAPSHOT</vertigo.version>
+		
+		<!-- For global junit test coverage -->
+		<jacoco.destFile>${project.basedir}/../target/jacoco-it.exec</jacoco.destFile>
+		<sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.reportPaths>
 	</properties>
 
 	<licenses>
