--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -179,6 +179,13 @@ limitations under the License. -->
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
 			</plugin>
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <configuration>
+			      <append>true</append>
+			    </configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
