--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,19 @@ limitations under the License. -->
 					<skip>true</skip> <!-- No need to deploy the reactor -->
 				</configuration>
 			</plugin>
+			<plugin>
+        		<groupId>org.jacoco</groupId>
+        		<artifactId>jacoco-maven-plugin</artifactId>
+        			<executions>
+          				<execution>
+	            			<id>report-aggregate</id>
+	            			<phase>verify</phase>
+	            			<goals>
+	              				<goal>report-aggregate</goal>
+	            			</goals>
+          				</execution>
+        			</executions>
+      			</plugin>
 		</plugins>
 	</build>
 
