--- a/vertigo-persona-api/pom.xml
+++ b/vertigo-persona-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>0.9.4-SNAPSHOT</version>
+		<version>0.9.4</version>
 	</parent>
 	
 	<artifactId>vertigo-persona-api</artifactId>
