--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>0.9.5-SNAPSHOT</version>
+		<version>0.9.4</version>
 	</parent>
 
 	<artifactId>vertigo-core</artifactId>
