--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>0.9.5-SNAPSHOT</version>
+		<version>0.9.4</version>
 	</parent>
 
 	<artifactId>vertigo-vega-impl</artifactId>
