[Persona] Refactor Security : add advanced model

--- a/vertigo-persona-impl/pom.xml
+++ b/vertigo-persona-impl/pom.xml
@@ -45,6 +45,13 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-dynamo-impl</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
