--- a/vertigo-persona-api/pom.xml
+++ b/vertigo-persona-api/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-dynamo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 		
 </project>
