--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 	<modules>
 		<module>vertigo-parent</module>
 		<module>vertigo-core</module>
+		<module>vertigo-core-plugins</module>
 
 		<module>vertigo-commons-api</module>
 		<module>vertigo-commons-impl</module>
