[core-plugins] redis connector in core-plugins

--- a/vertigo-core-plugins/pom.xml
+++ b/vertigo-core-plugins/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>vertigo-core</artifactId>
 			<version>${vertigo.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+   			 <version>2.9.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
