--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -28,6 +28,12 @@
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-core-plugins</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
@@ -59,5 +65,6 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.0</version>
 		</dependency>
+		
 	</dependencies>
 </project>
