--- a/vertigo-core-plugins/pom.xml
+++ b/vertigo-core-plugins/pom.xml
@@ -44,6 +44,20 @@
 		    <artifactId>jedis</artifactId>
    			 <version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		
+		<!-- Tests -->
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-core</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
