--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -28,12 +28,6 @@
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-core-plugins</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
@@ -64,6 +58,13 @@
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.8.0</version>
+		</dependency>
+		
+		<!--redis -->
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+   			 <version>2.9.0</version>
 		</dependency>
 		
 	</dependencies>
