--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -11,6 +11,7 @@
 	<artifactId>vertigo-studio</artifactId>
 	<packaging>jar</packaging>
 	<name>vertigo-studio</name>
+	<version>0.9.5-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
